attempt to fix hero banner image resizing on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,7 +92,7 @@ header {
 @media only screen and (max-width: 400px) {
   .slider-content {
     background-position: center;
-    object-fit: contain;
+    background-size: contain;
   }
 }
 
